--- a/index.html
+++ b/index.html
@@ -3,145 +3,12 @@
 
 	<head>
 		<meta charset="UTF-8" />
-		<title>Goblog</title>
-		<link rel="stylesheet" href="./css/Goblog.css" />
+		<title>iCloud</title>
+		<link rel="stylesheet" href="./css/iCloud.css" />
 	</head>
 
 	<body>
-		<div id="wzq">
-			<!--人机对战-->
-			<!--开始界面场景-->
-			<div id="Star">
-				<div id="gk">
-					<h1>五子棋</h1>
-					<ul>
-						<li id="computerAI">
-							人机对战
-						</li>
-						<li id="person">
-							双人对战
-						</li>
-						<li>
-							网络对战
-						</li>
-						<li>
-							排行榜
-						</li>
-						<li class="cj">
-							成就
-						</li>
-						<li class="xxk">
-							选项
-						</li>
-					</ul>
-				</div>
-				<div class="star">
-					<a href="javascript:;">开始</a>
-				</div>
-			</div>
-			<!--开始界面场景  End-->
-			
-			<!--成就-->
-			<div id="Cj">
-				<ul class="cj">
-					<li class="dt">您的等级：</li>
-				</ul>
-				<ul class="dd">
-					<li>
-						dfdsf
-					</li>
-					<li>
-						dfdsf
-					</li>
-					<li>
-						dfdsf
-					</li>
-					<li>
-						dfdsf
-					</li>
-					<li>
-						dfdsf
-					</li>
-				</ul>
-			</div>
-			<!--成就  End-->
-			
-			<!--选项卡-->
-			<div id="Xk">
-				<div class="ms">游戏模式</div>
-				<form action="" method="post">
-					新手: <input type="radio" name="ms" checked="checked" />
-					<!--默认选中:checked-->
-					初级: <input type="radio" name="ms" /> 中级: <input type="radio" name="ms" /> 高级: <input type="radio" name="ms" />
-				</form>
-			</div>
-			<!--选项卡 End-->
-			
-			<!--下棋场景-->
-			<div id="Canvas">
-				<!--不能用css来设置样式-->
-				<canvas id="canvas-z" class="canvas" width="200" height="200">......</canvas>
-				<canvas id="canvas" width="600" height="600">
-				......
-				</canvas>
-				<canvas id='canvas-y' class="canvas" width="200" height="200">......</canvas>
-				<audio id="audio" src="./music/棋子音效d.mp3"></audio>
-				<ul id="play">
-					<li class='retract'>
-						<a href="javascript:;">悔棋</a>
-					</li>
-					<li class='pause'>
-						<a href="javascript:;">议和</a>
-					</li>
-					<li class='end'>
-						<a href="javascript:;">认输</a>
-					</li>
-				</ul>
-				<div id="back" class="back">
-					<a href="javascript:;">退出</a>
-				</div>
-				<div class="btn">
-					<a href="javascript:;">查看棋谱</a>
-				</div>
-				<div class="restart">
-					<a href="javascript:;">重新开始</a>
-				</div>
-			</div>
-			<!--下棋场景  End-->
-			<!--悔棋-->
-			<div class="huiqi">
-				<a href="javascript:;">您是否确定悔棋？</a>
-				是：<input type="radio" name="true" checked="checked" /> 否：
-				<input type="radio" name="true" />
-			</div>
-			<!--议和-->
-			<div class="yihe">
-				<a href="javascript:;">您是否议和？</a>
-				是：<input type="radio" name="true" checked="checked" /> 否：
-				<input type="radio" name="true" />
-			</div>
-			<!--认输-->
-			<div class="renshu">
-				<a href="javascript:;">您是否认输？</a>
-				是：<input type="radio" name="true" checked="checked" /> 否：
-				<input type="radio" name="true" />
-			</div>
-			<!--悔棋	议和		认输	  End-->
-
-			<!--查看棋谱-->
-			<div id="check">
-				<div id="close">+</div>
-			</div>
-
-			<!--输赢-->
-			<div id="info">
-				<span class="text">黑</span>
-				<!--<span class="text">棋</span>
-				<span class="text">赢!</span>-->
-				<div class="button again">再来一局</div>
-				<div class="button cancle">退出游戏</div>
-			</div>
-		</div>
+		<div id="iCloud"></div>
 	</body>
 
 </html>
