--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 
 	<body ng-controller="mainiCloud">
+		
 		<!--left-main-view-->
 		<div id="iCloud" class="ic-view left-main-view">
 			<!--left-top-view-->
@@ -47,14 +48,42 @@
 			</div>
 		</div>
 		<!--left-main-view End-->
+		
 		<!--right-main-view-->
 		<div id="iClouds" class="right-amin-view">
-			
+			<!--right-top-->
+			<div class="right-top-view">
+				<div class="left-top">
+					<div class="left-icon"></div>
+					<input type="text" value="搜索所有提醒"/>
+				</div>
+				<div class="right-top">
+					<label for="">刘鹏辉</label>
+					<div class="info-img"></div>
+					<div class="line"></div>
+					<div class="help"></div>
+				</div>
+			</div>
+			<!--right-center-->
+			<div class="right-center-view">
+				<div class="right-cetner">
+					<div class="right-title">
+						<div class="title">新列表</div>
+						<div class="right-button">
+							<label for="">选项</label>
+						</div>
+					</div>
+					<div class="right-inner">
+						<div class="row-top"></div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<!--right-main-view End-->
+		
 	</body>
 
 </html>
 <script type="text/javascript" src="./js/jquery.min.js"></script>
-<script type="text/javascript" src="./js/Angular.js"></script>
+<!--<script type="text/javascript" src="./js/Angular.js"></script>-->
 <script type="text/javascript" src="js/iCloud.js"></script>
