--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
 					</div>
 					<div class="right-inner">
 						<div class="row-top"></div>
+						<div class="finish">
+							<div class="complete">
+								<div class="container">已完成：0 项</div>
+							</div>
+							<div class="project">
+								<div class="row-top"></div>
+								<div class="row-bottom"></div>
+								<div class="pro-title">新项目...</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
