--- a/index.html
+++ b/index.html
@@ -95,5 +95,5 @@
 
 </html>
 <script type="text/javascript" src="./js/jquery.min.js"></script>
-<!--<script type="text/javascript" src="./js/Angular.js"></script>-->
+<script type="text/javascript" src="./js/Angular.js"></script>
 <script type="text/javascript" src="js/iCloud.js"></script>
