--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 		<div id="iClouds" class="right-amin-view">
 			<!--right-top-->
 			<div class="right-top-view">
-				<div class="left-top">
+				<div class="left-top search">
 					<div class="left-icon"></div>
-					<input type="text" value="搜索所有提醒" />
+					<input type="text" placeholder="搜索所有提醒" />
 				</div>
 				<div class="right-top">
 					<label for="">刘鹏辉</label>
@@ -131,7 +131,7 @@
 							<div class="complete">
 								<div class="btn"></div>
 								<div class="container">已完成：<b>{{count()}}</b> 项</div>
-								<div class="clear {{lists[cu].theme}}">清除已完成事项</div>
+								<div class="clear {{lists[cu].theme}}" ng-click="clear()">清除已完成事项</div>
 							</div>
 							<!--中间完成项目-->
 							<ul complete-list class="" id="newimg">
@@ -143,8 +143,8 @@
 									<!--<input type="date" />-->
 									<div class="row-bottom"></div>
 								</li>
-								<li class="com-list-inner" ng-class='lists[cu].theme' ng-if="v.state==1" ng-repeat="v in lists[cu].todos track by $index">
-									<input type="text" class="list-inner" value="" {{v.name}} ng-model="v.name"/>
+								<li class="com-list-inner com-list" ng-class='lists[cu].theme' ng-if="v.state==1" ng-repeat="v in lists[cu].todos track by $index">
+									<input type="text" class="list-inner" value="" {{v.name}} ng-model="v.name" />
 									<a href="javascript:;" class="button">
 										<div class="checked {{lists[cu].theme}}" ng-click="pd($index);save2local()"></div>
 									</a>
@@ -159,15 +159,15 @@
 									</a>
 									<span class="x-info {{lists[cu].theme}}">详细信息</span>
 									<!--<div class="inner-row-bottom"></div>-->
-									<!--<div class="inner-row-bottom2"></div>-->
+								<!--<div class="inner-row-bottom2"></div>-->
 								<!--</li>-->
 							</ul>
 							<!--中间已完成项目   End-->
 
 							<!--新建项目-->
-							<div id="new" ngsc class="" ng-repeat="v in lists[cu].todos track by $index" ng-class='lists[cu].theme' ng-if="v.state==0">
+							<div id="new" ngsc class="newx" ng-repeat="v in lists[cu].todos track by $index" ng-class='lists[cu].theme' ng-if="v.state==0">
 								<div class="new-img {{lists[cu].theme}}" ng-click="pd($index);save2local()"></div>
-								<input type="text" class="new" value="{{v.name}}" ng-model="v.name"/>
+								<input type="text" class="new" value="{{v.name}}" ng-model="v.name" />
 							</div>
 
 							<div project class="">
@@ -185,7 +185,7 @@
 
 		</div>
 		<!--right-main-view End-->
-		
+
 		<!--clear-->
 		<div id="clear">
 			<div class="clear-img"></div>
@@ -195,10 +195,10 @@
 			</div>
 			<ul class="" bttn>
 				<li class="qx">
-					<a href="javascript:;">取消</a>
+					<a href="javascript:;" ng-click="">取消</a>
 				</li>
 				<li class="qc">
-					<a href="javascript:;">清除已完成事项</a>
+					<a href="javascript:;" ng-click="clear()">清除已完成事项</a>
 				</li>
 			</ul>
 		</div>
